# remote-dev

./: .gitignore  FFMPEG_PERFORMANCE_REPORT.md  RDP_FIX_REPORT.md  README.md  TEST_REPORT.md  agent_prompt_rdp_fix.md  package.json  rdp_test.js  rdp_test_script.mjs  start_backend.bat  start_frontend.bat  take_screenshot.js  test-rdp-automation.js  test-rdp.js  test_browser.js  test_helper.js  test_rdp.sh  test_results.json  test_ws_stress.py  web-server.js  webrtc_blackscreen_diagnosis_report.md  webrtc_stability_test_report.md
.claude/: settings.local.json
backend/: Cargo.toml  backend_log.txt  backend_new.err
backend/src/: main.rs  routes.rs  test.txt
backend/src/handlers/: file.rs  health.rs  mod.rs
backend/src/models/: file.rs  mod.rs  websocket.rs
backend/src/rdp/: capture.rs  ffmpeg_encoder.rs  input.rs  mod.rs  signaling.rs  webrtc.rs
backend/src/ws/: file_watch.rs  mod.rs  rdp.rs  terminal.rs
backend/static/: index.html
backend/static/assets/: index-B6kcbRMX.css  index-BMql87WF.css  index-BwHS-14c.js  index-Cw2PWzrc.js  index-DUeBbYAI.js  index-Hm090hA5.css
frontend/: github-trending-send.mjs  github-trending.js  github-trending.mjs  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  ContextMenu.css  ContextMenu.tsx  Dockview.css  Dockview.tsx  EditorPanel.css  EditorPanel.tsx  FileExplorer.css  FileExplorer.tsx  MenuBar.css  MenuBar.tsx  RemoteDesktop.css  RemoteDesktop.tsx  Terminal.css  Terminal.tsx  index.css
src/: main.rs
static/: app.js  index.html  style.css
